[package]
name = "zokrates_pest_ast"
version = "0.1.0"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[dependencies]
zokrates_pest = { git = "https://github.com/JacobEberhardt/ZoKratesGrammarSpecPEG", version = "0.1.0", branch = "better-unary" }
zokrates_field = { git = "https://github.com/ZoKrates/ZoKrates" }
pest = "2.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
lazy_static = "1.3.0"

[dev-dependencies]
glob = "0.2"
